{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 3519,
  "lineage": "e7b07ece-01e2-7157-b7a0-4ac30626baa0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004c3511582d7ac62",
            "arn": "arn:aws:ec2:us-east-1:881800390102:elastic-ip/eipalloc-004c3511582d7ac62",
            "domain": "vpc",
            "id": "eipalloc-004c3511582d7ac62",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-207-16-158.compute-1.amazonaws.com",
            "public_ip": "52.207.16.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-elastic-ip"
            },
            "tags_all": {
              "Name": "prod-elastic-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pubic-server-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e5276ebb8451442",
            "arn": "arn:aws:ec2:us-east-1:881800390102:instance/i-09232150465ff3b36",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09232150465ff3b36",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_us",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0746bbd9e269919aa",
            "private_dns": "ip-10-0-1-219.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.219",
            "public_ip": "44.222.147.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01f0cc4e07692b59b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-060027265bfce234b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbdd69f837fdf378",
            "tags": {
              "Name": "public-server1"
            },
            "tags_all": {
              "Name": "public-server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-060027265bfce234b"
            ]
          },
          "dependencies": [
            "aws_security_group.public-sg",
            "aws_subnet.publicsubnet1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-server-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e5276ebb8451442",
            "arn": "arn:aws:ec2:us-east-1:881800390102:instance/i-037c779cb061f6c19",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037c779cb061f6c19",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_us",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-001233fbc509b7564",
            "private_dns": "ip-10-0-4-84.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.84",
            "public_ip": "44.203.126.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01df1e3102688d07c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-060027265bfce234b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010d7ea4e26bf1c30",
            "tags": {
              "Name": "public-server2"
            },
            "tags_all": {
              "Name": "public-server2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-060027265bfce234b"
            ]
          },
          "dependencies": [
            "aws_security_group.public-sg",
            "aws_subnet.publicsubnet1b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881800390102:internet-gateway/igw-0f16fa1d54c188085",
            "id": "igw-0f16fa1d54c188085",
            "owner_id": "881800390102",
            "tags": {
              "Name": "production-ig"
            },
            "tags_all": {
              "Name": "production-ig"
            },
            "vpc_id": "vpc-0919187193ba2f2cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881800390102:loadbalancer/app/webserver-alb/7915b4b22bc4f678",
            "arn_suffix": "app/webserver-alb/7915b4b22bc4f678",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "webserver-alb-251012614.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:881800390102:loadbalancer/app/webserver-alb/7915b4b22bc4f678",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webserver-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b4e4041173751f75"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-010d7ea4e26bf1c30"
              },
              {
                "subnet_id": "subnet-0fbdd69f837fdf378"
              }
            ],
            "subnets": [
              "subnet-010d7ea4e26bf1c30",
              "subnet-0fbdd69f837fdf378"
            ],
            "tags": {
              "Name": "webserver-alb"
            },
            "tags_all": {
              "Name": "webserver-alb"
            },
            "vpc_id": "vpc-0919187193ba2f2cb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.publicsubnet1a",
            "aws_subnet.publicsubnet1b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881800390102:listener/app/webserver-alb/7915b4b22bc4f678/40ada29174d69ae5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:881800390102:targetgroup/private-webserver-target-group/bb017ee7ff30a9c4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:881800390102:listener/app/webserver-alb/7915b4b22bc4f678/40ada29174d69ae5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:881800390102:loadbalancer/app/webserver-alb/7915b4b22bc4f678",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web_alb",
            "aws_lb_target_group.web_target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.publicsubnet1a",
            "aws_subnet.publicsubnet1b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881800390102:targetgroup/private-webserver-target-group/bb017ee7ff30a9c4",
            "arn_suffix": "targetgroup/private-webserver-target-group/bb017ee7ff30a9c4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:881800390102:targetgroup/private-webserver-target-group/bb017ee7ff30a9c4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "private-webserver-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "private-webserver-target-group"
            },
            "tags_all": {
              "Name": "private-webserver-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0919187193ba2f2cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004c3511582d7ac62",
            "association_id": "eipassoc-027c7885f5afdd2b2",
            "connectivity_type": "public",
            "id": "nat-0d498bcf52dfab9d6",
            "network_interface_id": "eni-0f98fb9cc0d68f61e",
            "private_ip": "10.0.1.134",
            "public_ip": "52.207.16.158",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fbdd69f837fdf378",
            "tags": {
              "Name": "prod-nat-gateway"
            },
            "tags_all": {
              "Name": "prod-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.ig",
            "aws_subnet.publicsubnet1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-route-to-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0afe0f65bc3b5875d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d498bcf52dfab9d6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0afe0f65bc3b5875d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rt",
            "aws_subnet.publicsubnet1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881800390102:route-table/rtb-0afe0f65bc3b5875d",
            "id": "rtb-0afe0f65bc3b5875d",
            "owner_id": "881800390102",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-routetable"
            },
            "tags_all": {
              "Name": "private-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0919187193ba2f2cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881800390102:route-table/rtb-09656d9a4389f8e39",
            "id": "rtb-09656d9a4389f8e39",
            "owner_id": "881800390102",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f16fa1d54c188085",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-routetable"
            },
            "tags_all": {
              "Name": "public-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0919187193ba2f2cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c23493830058b5c",
            "route_table_id": "rtb-0afe0f65bc3b5875d",
            "subnet_id": "subnet-0471e1d6c40fc869a"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.privatesubnet1a-App",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association-1a-DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043e8a013dadfc737",
            "route_table_id": "rtb-0afe0f65bc3b5875d",
            "subnet_id": "subnet-00c848dcf44d49030"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.privatesubnet1a-DB",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0244b176005eed80a",
            "route_table_id": "rtb-0afe0f65bc3b5875d",
            "subnet_id": "subnet-0bb028c47f6c1e71a"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.privatesubnet1b-App",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association-1b-DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0529d72233c7b5da1",
            "route_table_id": "rtb-0afe0f65bc3b5875d",
            "subnet_id": "subnet-06587d4336d85b991"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.privatesubnet1b-DB",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb0f14d095bb204b",
            "route_table_id": "rtb-09656d9a4389f8e39",
            "subnet_id": "subnet-0fbdd69f837fdf378"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rt",
            "aws_subnet.publicsubnet1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062bbba030f94ad2d",
            "route_table_id": "rtb-09656d9a4389f8e39",
            "subnet_id": "subnet-010d7ea4e26bf1c30"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rt",
            "aws_subnet.publicsubnet1b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881800390102:security-group/sg-0b4e4041173751f75",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4e4041173751f75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240522085245114700000003",
            "name_prefix": "terraform-",
            "owner_id": "881800390102",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-alb-sg"
            },
            "tags_all": {
              "Name": "webserver-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0919187193ba2f2cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881800390102:security-group/sg-039cafb44c8ff4649",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039cafb44c8ff4649",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-060027265bfce234b"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b4e4041173751f75"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240522085257511100000006",
            "name_prefix": "terraform-",
            "owner_id": "881800390102",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-securitygroup"
            },
            "tags_all": {
              "Name": "private-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0919187193ba2f2cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.public-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881800390102:security-group/sg-060027265bfce234b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060027265bfce234b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240522085245114700000004",
            "name_prefix": "terraform-",
            "owner_id": "881800390102",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-securitygroup"
            },
            "tags_all": {
              "Name": "public-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0919187193ba2f2cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881800390102:security-group/sg-0665f89f7a10c3026",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0665f89f7a10c3026",
            "ingress": [],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "881800390102",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0919187193ba2f2cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_private_vm_ingress_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-898874654",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0665f89f7a10c3026",
            "security_group_rule_id": "sgr-03ea0c15c24b0f814",
            "self": false,
            "source_security_group_id": "sg-039cafb44c8ff4649",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.private-sg",
            "aws_security_group.public-sg",
            "aws_security_group.rds-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet1a-App",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881800390102:subnet/subnet-0471e1d6c40fc869a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0471e1d6c40fc869a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881800390102",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-privatesub1a-App"
            },
            "tags_all": {
              "Name": "prod-privatesub1a-App"
            },
            "vpc_id": "vpc-0919187193ba2f2cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet1a-DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881800390102:subnet/subnet-00c848dcf44d49030",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c848dcf44d49030",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881800390102",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-privatesub1a-DB"
            },
            "tags_all": {
              "Name": "prod-privatesub1a-DB"
            },
            "vpc_id": "vpc-0919187193ba2f2cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet1b-App",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881800390102:subnet/subnet-0bb028c47f6c1e71a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb028c47f6c1e71a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881800390102",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-privatesub1b-App"
            },
            "tags_all": {
              "Name": "prod-privatesub1b-App"
            },
            "vpc_id": "vpc-0919187193ba2f2cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet1b-DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881800390102:subnet/subnet-06587d4336d85b991",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06587d4336d85b991",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881800390102",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-privatesub1b-DB"
            },
            "tags_all": {
              "Name": "prod-privatesub1b-DB"
            },
            "vpc_id": "vpc-0919187193ba2f2cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881800390102:subnet/subnet-0fbdd69f837fdf378",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbdd69f837fdf378",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "881800390102",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-publicsub1a"
            },
            "tags_all": {
              "Name": "prod-publicsub1a"
            },
            "vpc_id": "vpc-0919187193ba2f2cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881800390102:subnet/subnet-010d7ea4e26bf1c30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010d7ea4e26bf1c30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "881800390102",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-publicsub1b"
            },
            "tags_all": {
              "Name": "prod-publicsub1b"
            },
            "vpc_id": "vpc-0919187193ba2f2cb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881800390102:vpc/vpc-0919187193ba2f2cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09883dfedc5f5559c",
            "default_route_table_id": "rtb-042f54648f534e3c7",
            "default_security_group_id": "sg-05eb96d3ea838d9dc",
            "dhcp_options_id": "dopt-09fb6dc1541edbe2c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0919187193ba2f2cb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042f54648f534e3c7",
            "owner_id": "881800390102",
            "tags": {
              "Name": "production-vpc"
            },
            "tags_all": {
              "Name": "production-vpc"
            }
          }
        }
      ]
    }
  ]
}